[gd_scene load_steps=3 format=2]

[ext_resource path="res://_NonMainGameRelateds/_Master/AudioRelated/GUI/AudioSettingsPanel/AudioSettingsPanel.gd" type="Script" id=1]
[ext_resource path="res://_NonMainGameRelateds/_Master/AudioRelated/GUI/AudioSettingsPanel/Subs/AudioBusVolumePanel/AudioBusVolumePanel.tscn" type="PackedScene" id=2]

[node name="AudioSettingsPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 222.0
margin_bottom = 169.0
mouse_filter = 2
custom_constants/separation = 10

[node name="AudioBusVolumePanel_BGM" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_right = 106.0
margin_bottom = 169.0

[node name="AudioBusVolumePanel_SoundFX" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 116.0
margin_right = 222.0
margin_bottom = 169.0
